test/e2e/chainsaw/httproute-same-header-name/assertions/rollout-healthy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: httproute-same-header-name-rollout
  namespace: default
status:
  (phase == 'Healthy'): true
